<resources>
    <string name="app_name">ПВР СІЗО</string>
    <string name="title_1">ПРАВИЛА</string>
    <string name="title_2">внутрішнього розпорядку слідчих ізоляторів Державної кримінально-виконавчої служби України</string>
    <string name="open">ВІДКРИТИ</string>
    <string name="nakaz">Наказ №1769/5 від 14.06.2019року</string>
    <string name="todos">TODO</string>
    <string name="ZMIST">З М І С Т</string>
    <string name="dodat">Додаток</string>
    <string name="I">I. Загальні положення</string>
    <string name="I_1">Правові підстави діяльності адміністрації слідчого ізолятора</string>
    <string name="I_2">Взаємовідносини персоналу СІЗО з ув’язненими та засудженими</string>
    <string name="I_3">Правове становище ув’язнених та засуджених, яких тримають у СІЗО</string>
    <string name="I_4">Правила поведінки в СІЗО ув’язнених і засуджених</string>
    <string name="I_5">Контроль за діяльністю та перевірки СІЗО</string>
    <string name="II">II. Підстави та порядок приймання до СІЗО ув’язнених і засуджених</string>
    <string name="II_1">Підстави для приймання до СІЗО ув’язнених і засуджених</string>
    <string name="II_2">Порядок приймання ув’язнених та засуджених до СІЗО</string>
    <string name="II_3">Контроль за строками тримання та звільнення ув’язнених і засуджених</string>
    <string name="II_4">Переведення ув’язнених до інших СІЗО</string>
    <string name="III">III. Особливості розміщення в СІЗО ув’язнених і засуджених</string>
    <string name="III_1">Особливості розміщення ув’язнених і засуджених</string>
    <string name="III_2">Особливості обладнання камер та інших приміщень СІЗО</string>
    <string name="IV">IV. Забезпечення режиму тримання у слідчих ізоляторах</string>
    <string name="IV_1">Поняття режиму та розпорядку дня</string>
    <string name="IV_2">Організація розпорядку дня персоналу СІЗО</string>
    <string name="IV_3">Організація охорони та нагляду за ув’язненими і засудженими у СІЗО</string>
    <string name="IV_4">Забезпечення участі ув’язнених і засуджених у кримінальному провадженні</string>
    <string name="IV_5">Проведення обшуку та огляду речей ув’язнених і засуджених, персоналу СІЗО і громадян, які перебувають на території СІЗО</string>
    <string name="IV_6">Порядок вилучення в ув’язнених і засуджених грошей, цінних речей та предметів</string>
    <string name="IV_7">Особливості відвідування СІЗО</string>
    <string name="IV_8">Особистий прийом ув’язнених і засуджених та інших осіб адміністрацією СІЗО</string>
    <string name="IV_9">Надання прогулянки ув’язненим і засудженим</string>
    <string name="V">V. Підстави та порядок застосування заходів фізичного впливу, спеціальних засобів, гамівної сорочки, службових собак та вогнепальної зброї</string>
    <string name="V_1">Загальні положення</string>
    <string name="V_2">Застосування спеціальних засобів, фізичної сили та гамівної сорочки</string>
    <string name="V_3">Застосування вогнепальної зброї</string>
    <string name="V_4">Застосування службових собак</string>
    <string name="VI">VI. Придбання продуктів харчування, предметів першої необхідності, отримання передач, посилок, бандеролей та грошових переказів</string>
    <string name="VI_1">Порядок придбання ув’язненими і засудженими продуктів харчування та предметів першої необхідності</string>
    <string name="VI_2">Порядок одержання ув’язненими і засудженими передач</string>
    <string name="VI_3">Порядок одержання ув’язненими і засудженими посилок та бандеролей</string>
    <string name="VI_4">Порядок одержання та відправлення грошових переказів</string>
    <string name="VII">VII. Порядок надання побачень з родичами, іншими особами та захисником, порядок листування</string>
    <string name="VII_1">Особливості надання побачень ув’язненим та засудженим з родичами та іншими особами</string>
    <string name="VII_2">Особливості проведення побачень із захисником, адвокатом або іншим фахівцем у галузі права, який за законом має право на надання правової допомоги особисто чи за дорученням юридичної особи</string>
    <string name="VII_3">Листування ув’язнених і засуджених</string>
    <string name="VII_4">Надання засудженим права на телефонні розмови та користування мережею Інтерне</string>
    <string name="VIII">VIII. Надання соціально-психологічної та педагогічної допомоги, застосування заходів заохочення і стягнення</string>
    <string name="VIII_1">Порядок надання соціально-психологічної та педагогічної допомоги ув’язненим і засудженим</string>
    <string name="VIII_2">Особливості проведення соціально-виховної, психологічної і педагогічної роботи з неповнолітніми особам</string>
    <string name="VIII_3">Організація перегляду телепередач, радіотрансляції та дозвілля для ув’язнених і засуджених</string>
    <string name="VIII_4">Бібліотечна робота в СІЗО та передплата періодичних видань ув’язненими і засудженими</string>
    <string name="VIII_5">Богослужіння та релігійні обряди в СІЗО</string>
    <string name="VIII_6">Порядок застосування заходів заохочення і стягнення до ув’язнених і засуджених</string>
    <string name="VIII_7">Особливості застосування і відбування стягнення у вигляді поміщення до карцеру чи дисциплінарного ізолятора, переведення до приміщення камерного типу (одиночної камери)</string>
    <string name="IX">IX. Особливості праці, матеріально-побутового забезпечення та тримання ув’язнених й окремих категорій засуджених</string>
    <string name="IX_1">Праця ув’язнених</string>
    <string name="IX_2">Особливості тримання і залучення до праці засуджених, залишених у СІЗО для роботи з господарського обслуговування</string>
    <string name="IX_3">Особливості тримання і залучення до праці осіб, які прямують транзитом</string>
    <string name="IX_4">Матеріально-побутові умови тримання ув’язнених і засуджених</string>
    <string name="IX_5">Приймання їжі ув’язненими і засудженими</string>
    <string name="IX_6">Особливості забезпечення ув’язнених і засуджених одягом</string>
    <string name="X">X. Медичне обслуговування ув’язнених і засуджених в СІЗО</string>
    <string name="X_1">Організація роботи медичної частини</string>
    <string name="X_2">Організація лікувально-профілактичної допомоги у СІЗО, виконання санітарно-гігієнічних та протиепідемічних правил</string>
    <string name="X_3">Особливості проведення лікувально-профілактичних заходів у випадку психічних розладів в ув’язнених і засуджених</string>
    <string name="XI">XI. Участь ув’язнених і засуджених у цивільно-правових та сімейно-правових відносинах</string>
    <string name="XI_1">Участь ув’язнених і засуджених у цивільно-правових відносинах</string>
    <string name="XI_2">Участь ув’язнених і засуджених у сімейно-правових відносинах</string>
    <string name="XI_3">Поховання ув’язнених і засуджених, які померли у СІЗО</string>
    <string name="Add_1">Перелік продуктів харчування, предметів першої необхідності, інших речей та предметів, заборонених для передавання ув’язненим і засудженим, а також для користування та зберігання при собі</string>
    <string name="Add_2">Перелік продуктів харчування, предметів першої необхідності, інших речей та предметів, які ув’язнені і засуджені можуть отримувати в посилках (передачах) та бандеролях, купувати в крамницях СІЗО та зберігати при собі</string>
    <string name="Add_3">Типовий розпорядок дня ув’язнених і засуджених, яких тримають у СІЗО</string>
    <string name="Add_4">Порядок огляду вмісту посилок (передач) та бандеролей</string>
    <string name="Add_5">Обладнання кімнат для проведення побачень</string>
    <string name="rI">Розділ I</string>
    <string name="rII">Розділ II</string>
    <string name="rIII">Розділ III</string>
    <string name="rIV">Розділ IV</string>
    <string name="rV">Розділ V</string>
    <string name="rVI">Розділ VI</string>
    <string name="rVII">Розділ VII</string>
    <string name="rVIII">Розділ VIII</string>
    <string name="rIX">Розділ IX</string>
    <string name="rX">Розділ X</string>
    <string name="rXI">Розділ XI</string>
    <string name="radd">ДОДАТОК</string>

</resources>