<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ZMIST"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_1"
                android:text="@string/I"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_2"
                android:text="@string/II"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_3"
                android:text="@string/III"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_4"
                android:text="@string/IV"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_5"
                android:text="@string/V"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_6"
                android:text="@string/VI"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_7"
                android:text="@string/VII"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_8"
                android:text="@string/VIII"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_9"
                android:text="@string/IX"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_10"
                android:text="@string/X"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_11"
                android:text="@string/XI"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="Adds"
                android:text="@string/dodat"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>