<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rVIII"
                android:textAlignment="center"
                android:textColor="@color/read"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_8_1"
                android:text="@string/VIII_1"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_8_2"
                android:text="@string/VIII_2"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_8_3"
                android:text="@string/VIII_3"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_8_4"
                android:text="@string/VIII_4"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_8_5"
                android:text="@string/VIII_5"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_8_6"
                android:text="@string/VIII_6"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="R_8_7"
                android:text="@string/VIII_7"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>