<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radd"
                android:textAlignment="center"
                android:textColor="@color/read"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="A_1"
                android:text="@string/Add_1"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="A_2"
                android:text="@string/Add_2"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="A_3"
                android:text="@string/Add_3"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button68"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="A_4"
                android:text="@string/Add_4"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:onClick="A_5"
                android:text="@string/Add_5"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>